delate whitespace, correct package.json

--- a/sass/style.css
+++ b/sass/style.css
@@ -11,10 +11,6 @@
             box-sizing: border-box;
   }
 
-/* *{
-    border: 1px solid black;
-} */
-
 body{
     margin: 0;
     color: var(--dark-color);
@@ -65,9 +61,6 @@ p {
     font-family: var(--fit-font);
 }
 
-
-
-
 .service-tills p {
     font-family: unset;
     font-size: 15px;
@@ -80,7 +73,6 @@ li {
     font-family: var(--fat-font);
     text-transform: uppercase;
     font-weight: bold;
-    
 }
 
 nav{
@@ -111,7 +103,6 @@ nav{
     top: 150px;
     text-align: center;
     color: white;
-
 }
 
 .btn {
@@ -124,7 +115,6 @@ nav{
     color: white;
     border-radius: 5px;
     font-size: 15px;
-    
 }
 
 .services-tills {
@@ -178,7 +168,6 @@ a{
     height: 100%;
     margin: 0;
 }
-
 
 .portfolio-row {
     justify-content: center;
